objects/SubProject_External_Related_Entity__c.object
<CustomObject>
    <description>Object used to store IDs of all External Related Entities like Impact Project Numbers, RMS Request IDs, Contract Numbers, CMF Numbers. Currently all of this information comes in through the IMPACT Integration</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Number__c</fullName>
        <label>Entity Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMS Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>SubProject External Related Entities</relationshipLabel>
        <relationshipName>SubProject_External_Related_Entities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubProject__c</fullName>
        <label>SubProject</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>SubProject External Related Entities</relationshipLabel>
        <relationshipName>SubProject_External_Related_Entities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>SubProject External Related Entity</label>
    <nameField>
        <displayFormat>EXT-{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SubProject External Related Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_manual_record_entry_of_CMF</fullName>
        <active>false</active>
        <description>External Related Entity record for entity type &apos;CMF&apos; cannot be created manually. System will create record of entity type &apos;CMF&apos; whenever a site record is created under a sub project.</description>
        <errorConditionFormula>ISPICKVAL(Entity_Type__c, &apos;CMF&apos;) &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))</errorConditionFormula>
        <errorMessage>External Related Entity record for entity type &apos;CMF&apos; cannot be created manually. System will create record of entity type &apos;CMF&apos; whenever a site record is created under a sub project.</errorMessage>
    </validationRules>
</CustomObject>